--- a/public/index.html
+++ b/public/index.html
@@ -1185,6 +1185,7 @@
         import { getFirestore, doc, getDoc, setDoc, collection, query, where, getDocs, runTransaction, updateDoc, increment, deleteField, serverTimestamp, Timestamp, orderBy, addDoc, deleteDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getFunctions, httpsCallable } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-functions.js";
         import { getStorage, ref as storageRef, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
+        import { createTeacherClass } from "./js/classManager.js";
 
         // IMPORTANT: Replace with your actual Firebase config
         const firebaseConfig = {
@@ -3779,7 +3780,7 @@
                         const name = prompt('학급 이름을 입력하세요');
                         if (name) {
                             try {
-                                await setDoc(docRef, { name, students: [] });
+                                await createTeacherClass(db, currentUserData.id, name);
                                 loadMyClass();
                             } catch (err) {
                                 container.innerHTML = '<p class="text-red-500 text-center">학급 생성 실패</p>';
